--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
   width: 100%;
   margin: 0 auto;
   text-align: center;
-  font-size: 45px;
+  font-size: 60px;
   margin-top: 20px;
   margin-bottom: 20px; }
 
@@ -78,7 +78,7 @@ dialog {
   height: 100%;
   width: 100%;
   position: fixed;
-  top: -600px;
+  top: -900px;
   color: #212121;
   margin: 0 auto;
   box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
@@ -96,7 +96,12 @@ dialog span {
 .see {
   /* opacity: 1; */
   top: 0;
-  transition: 1s ease all; }
+  transition: 1s ease all !important;
+  -ms-transition: 1s ease all;
+  -moz-transition: 1s ease all;
+  -webkit-transition: 1s ease all !important;
+  z-index: 9999;
+  left: 0; }
 
 #inputSeek {
   width: 400px;
@@ -146,16 +151,25 @@ header .nav p {
   padding: 25px;
   width: 100%;
   color: rgba(255, 255, 255, 0.6);
-  transition: color 0.3s ease-in-out; }
+  transition: color 0.3s ease-in-out;
+  -ms-transition: color 0.3s ease-in-out;
+  -moz-transition: color 0.3s ease-in-out;
+  -webkit-transition: color 0.3s ease-in-out; }
 
 .activated {
   color: white !important;
-  transition: 1s ease all; }
+  transition: 1s ease all;
+  -ms-transition: 1s ease all;
+  -moz-transition: 1s ease all;
+  -webkit-transition: 1s ease all; }
 
 .nav p a:hover {
   border-bottom: 5px solid white;
   color: white;
-  transition: color 0.3s ease-in-out; }
+  transition: color 0.3s ease-in-out;
+  -ms-transition: color 0.3s ease-in-out;
+  -moz-transition: color 0.3s ease-in-out;
+  -webkit-transition: color 0.3s ease-in-out; }
 
 header {
   width: 100%;
@@ -164,7 +178,10 @@ header {
   top: 0;
   left: 0;
   z-index: 999;
-  transition: 1s ease all !important; }
+  transition: 1s ease all !important;
+  -ms-transition: 1s ease all;
+  -moz-transition: 1s ease all;
+  -webkit-transition: 1s ease all; }
 
 header .nav {
   position: relative;
@@ -172,9 +189,12 @@ header .nav {
   background-color: #1976D2;
   height: 80px;
   line-height: 80px;
-  transition: 0.5s ease all;
   opacity: 1;
-  z-index: 500; }
+  z-index: 500;
+  transition: 0.5s ease all;
+  -ms-transition: 0.5s ease all;
+  -moz-transition: 0.5s ease all;
+  -webkit-transition: 0.5s ease all; }
 
 .head_three {
   height: 100vh;
@@ -208,10 +228,13 @@ header .nav {
   position: relative;
   left: 0px;
   opacity: 0;
-  transition: 0.5s ease all;
   height: 100%;
   font-size: 28px;
-  cursor: pointer; }
+  cursor: pointer;
+  transition: 0.5s ease all;
+  -ms-transition: 0.5s ease all;
+  -moz-transition: 0.5s ease all;
+  -webkit-transition: 0.5s ease all; }
 
 .ham_slide {
   left: 100px; }
@@ -219,7 +242,10 @@ header .nav {
 .headee_slide {
   left: 0px;
   opacity: 0;
-  transition: 0.5s ease all; }
+  transition: 1s ease all;
+  -ms-transition: 1s ease all;
+  -moz-transition: 1s ease all;
+  -webkit-transition: 1s ease all; }
 
 .bye {
   opacity: 1; }
@@ -248,6 +274,8 @@ header .nav {
   top: 0;
   left: 45%;
   border-radius: 50%;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
   margin: -25px auto;
   background-image: url("https://yt3.ggpht.com/-HLpWHbRqB_4/AAAAAAAAAAI/AAAAAAAAAAA/FAxGvzXaNcg/s900-c-k-no/photo.jpg");
   background-size: cover; }
@@ -293,17 +321,23 @@ header .nav {
   opacity: 0.5;
   float: left;
   width: 0%;
-  transition: 1s ease all; }
+  transition: 1s ease all;
+  -ms-transition: 1s ease all;
+  -moz-transition: 1s ease all;
+  -webkit-transition: 1s ease all; }
 
 #home a:active:after {
   width: 100%;
-  transition: 1s ease all; }
+  transition: 1s ease all;
+  -ms-transition: 1s ease all;
+  -moz-transition: 1s ease all;
+  -webkit-transition: 1s ease all; }
 
 .time_h1 {
   width: 100%;
   margin: 0 auto;
   text-align: center;
-  font-size: 45px;
+  font-size: 60px;
   margin-top: 20px;
   margin-bottom: 20px; }
 
@@ -338,22 +372,64 @@ header .nav {
   font-size: 20px;
   border: 5px solid #0D47A1;
   transform: scale(0, 0);
+  -ms-transform: scale(0, 0);
+  -moz-transform: scale(0, 0);
+  -webkit-transform: scale(0, 0);
   left: 50%; }
 
 .scale {
   transform: scale(1, 1);
+  -ms-transform: scale(1, 1);
+  -moz-transform: scale(1, 1);
+  -webkit-transform: scale(1, 1);
   animation: scale 2s;
+  -webkit-animation: scale 2s;
+  -ms-animation: scale 2s;
+  -moz-animation: scale 2s;
   margin-left: -40px; }
 
 @-webkit-keyframes scale {
   0% {
-    transform: scale(0, 0); }
+    transform: scale(0, 0);
+    -ms-transform: scale(0, 0);
+    -moz-transform: scale(0, 0);
+    -webkit-transform: scale(0, 0); }
   25% {
-    transform: scale(1.2, 1.2); }
+    transform: scale(1.2, 1.2);
+    -ms-transform: scale(1.2, 1.2);
+    -moz-transform: scale(1.2, 1.2);
+    -webkit-transform: scale(1.2, 1.2); }
   50% {
-    transform: scale(0.8, 0.8); }
+    transform: scale(0.8, 0.8);
+    -ms-transform: scale(0.8, 0.8);
+    -moz-transform: scale(0.8, 0.8);
+    -webkit-transform: scale(0.8, 0.8); }
   100% {
-    transform: scale(1, 1); } }
+    transform: scale(1, 1);
+    -ms-transform: scale(1, 1);
+    -moz-transform: scale(1, 1);
+    -webkit-transform: scale(1, 1); } }
+@keyframes scale {
+  0% {
+    transform: scale(0, 0);
+    -ms-transform: scale(0, 0);
+    -moz-transform: scale(0, 0);
+    -webkit-transform: scale(0, 0); }
+  25% {
+    transform: scale(1.2, 1.2);
+    -ms-transform: scale(1.2, 1.2);
+    -moz-transform: scale(1.2, 1.2);
+    -webkit-transform: scale(1.2, 1.2); }
+  50% {
+    transform: scale(0.8, 0.8);
+    -ms-transform: scale(0.8, 0.8);
+    -moz-transform: scale(0.8, 0.8);
+    -webkit-transform: scale(0.8, 0.8); }
+  100% {
+    transform: scale(1, 1);
+    -ms-transform: scale(1, 1);
+    -moz-transform: scale(1, 1);
+    -webkit-transform: scale(1, 1); } }
 .timeline_contain .line p:nth-of-type(2) {
   margin-top: 105px; }
 
@@ -394,11 +470,17 @@ header .nav {
   background-color: white;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   opacity: 0;
-  transition: 0.3s ease all; }
+  transition: 0.4s ease all;
+  -ms-transition: 0.4s ease all;
+  -moz-transition: 0.4s ease all;
+  -webkit-transition: 0.4s ease all; }
 
 .op {
   opacity: 1;
-  transition: 0.3s ease all; }
+  transition: 0.4s ease all;
+  -ms-transition: 0.4s ease all;
+  -moz-transition: 0.4s ease all;
+  -webkit-transition: 0.4s ease all; }
 
 .skills {
   width: 100%;
@@ -414,7 +496,7 @@ header .nav {
   width: 100%;
   margin: 0 auto;
   text-align: center;
-  font-size: 45px;
+  font-size: 60px;
   margin-top: 20px;
   margin-bottom: 20px; }
 
@@ -622,7 +704,7 @@ header .nav {
     width: 100%;
     margin: 0 auto;
     text-align: center;
-    font-size: 45px;
+    font-size: 60px;
     margin-top: 20px; }
   .projects #filter {
     margin: 0 auto;
@@ -660,16 +742,25 @@ header .nav {
   line-height: 600px;
   height: 100%;
   transition: 0.2s ease all;
+  -ms-transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
   background-position: -105px 0; }
 
 .grid_one:hover {
   transform: scale(1.3, 1.3);
   line-height: 250px;
-  transition: 0.4s ease all; }
+  transition: 0.4s ease all;
+  -ms-transition: 0.4s ease all;
+  -moz-transition: 0.4s ease all;
+  -webkit-transition: 0.4s ease all; }
 
 .grid_one:hover:after {
   opacity: 0.5;
-  transition: 0.4s ease all; }
+  transition: 0.4s ease all;
+  -ms-transition: 0.4s ease all;
+  -moz-transition: 0.4s ease all;
+  -webkit-transition: 0.4s ease all; }
 
 .grid_one:after {
   content: "Data Vis.";
@@ -680,7 +771,10 @@ header .nav {
   left: 0;
   background-color: black;
   opacity: 0;
-  transition: 0.4s ease all; }
+  transition: 0.4s ease all;
+  -ms-transition: 0.4s ease all;
+  -moz-transition: 0.4s ease all;
+  -webkit-transition: 0.4s ease all; }
 
 .grid_two {
   background-image: url("https://mir-s3-cdn-cf.behance.net/wip/disp/ddeca82332047.55e9e667a3f9f.jpg");
@@ -690,16 +784,28 @@ header .nav {
   font-size: 26px;
   line-height: 600px;
   height: 100%;
-  transition: 0.2s ease all; }
+  transition: 0.2s ease all;
+  -ms-transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all; }
 
 .grid_two:hover {
   transform: scale(1.3, 1.3);
+  -webkit-transform: scale(1.3, 1.3);
+  -moz-transform: scale(1.3, 1.3);
+  -ms-transform: scale(1.3, 1.3);
   line-height: 250px;
-  transition: 0.4s ease all; }
+  transition: 0.4s ease all;
+  -ms-transition: 0.4s ease all;
+  -moz-transition: 0.4s ease all;
+  -webkit-transition: 0.4s ease all; }
 
 .grid_two:hover:after {
   opacity: 0.5;
-  transition: 0.4s ease all; }
+  transition: 0.4s ease all;
+  -ms-transition: 0.4s ease all;
+  -moz-transition: 0.4s ease all;
+  -webkit-transition: 0.4s ease all; }
 
 .grid_two:after {
   content: "Motion(2015)";
@@ -710,7 +816,10 @@ header .nav {
   left: 0;
   background-color: black;
   opacity: 0;
-  transition: 0.4s ease all; }
+  transition: 0.4s ease all;
+  -ms-transition: 0.4s ease all;
+  -moz-transition: 0.4s ease all;
+  -webkit-transition: 0.4s ease all; }
 
 .grid_three {
   background-image: url("../images/Cont.png");
@@ -721,16 +830,25 @@ header .nav {
   font-size: 26px;
   line-height: 600px;
   height: 100%;
-  transition: 0.2s ease all; }
+  transition: 0.3s ease all;
+  -ms-transition: 0.3s ease all;
+  -moz-transition: 0.3s ease all;
+  -webkit-transition: 0.3s ease all; }
 
 .grid_three:hover {
   transform: scale(1.3, 1.3);
   line-height: 250px;
-  transition: 0.4s ease all; }
+  transition: 0.5s ease all;
+  -ms-transition: 0.5s ease all;
+  -moz-transition: 0.5s ease all;
+  -webkit-transition: 0.5s ease all; }
 
 .grid_three:hover:after {
   opacity: 0.5;
-  transition: 0.4s ease all; }
+  transition: 0.5s ease all;
+  -ms-transition: 0.5s ease all;
+  -moz-transition: 0.5s ease all;
+  -webkit-transition: 0.5s ease all; }
 
 .grid_three:after {
   content: "Rails Blog";
@@ -741,13 +859,16 @@ header .nav {
   left: 0;
   background-color: black;
   opacity: 0;
-  transition: 0.4s ease all; }
+  transition: 0.5s ease all;
+  -ms-transition: 0.5s ease all;
+  -moz-transition: 0.5s ease all;
+  -webkit-transition: 0.5s ease all; }
 
 .interests_h1 {
   width: 100%;
   margin: 0 auto;
   text-align: center;
-  font-size: 45px;
+  font-size: 60px;
   margin-top: 20px; }
 
 .interests {
@@ -759,10 +880,16 @@ header .nav {
 
 .interest_one {
   transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  -webkit-transform: translate(0, 0);
+  -moz-transform: translate(0, 0);
   position: relative; }
 
 .interest_three {
   transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  -webkit-transform: translate(0, 0);
+  -moz-transform: translate(0, 0);
   position: relative; }
 
 .area {
@@ -788,13 +915,16 @@ header .nav {
 
 .opa {
   opacity: 1;
-  transition: 0.5s ease all; }
+  transition: 0.5s ease all;
+  -ms-transition: 0.5s ease all;
+  -moz-transition: 0.5s ease all;
+  -webkit-transition: 0.5s ease all; }
 
 .people_h1 {
   width: 100%;
   margin: 0 auto;
   text-align: center;
-  font-size: 45px;
+  font-size: 60px;
   margin-top: 30px;
   margin-bottom: 30px; }
 
@@ -820,10 +950,16 @@ header .nav {
     padding-bottom: 20px; }
 
 .person_three {
-  transform: translate(0, 0); }
+  transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  -webkit-transform: translate(0, 0);
+  -moz-transform: translate(0, 0); }
 
 .person_one {
-  transform: translate(0, 0); }
+  transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  -webkit-transform: translate(0, 0);
+  -moz-transform: translate(0, 0); }
 
 .person:before {
   content: "\f10d";
@@ -848,7 +984,7 @@ header .nav {
   width: 100%;
   margin: 0 auto;
   text-align: center;
-  font-size: 45px;
+  font-size: 60px;
   margin-top: 20px;
   margin-bottom: 20px; }
 
@@ -886,14 +1022,20 @@ form {
     opacity: 0.5;
     float: left;
     width: 0%;
-    transition: 1s ease all; }
+    transition: 1s ease all;
+    -ms-transition: 1s ease all;
+    -moz-transition: 1s ease all;
+    -webkit-transition: 1s ease all; }
   form .submit:focus {
     outline: none; }
   form .submit:active {
     outline: none; }
   form .submit:active:after {
     width: 100%;
-    transition: 1s ease all; }
+    transition: 1s ease all;
+    -webkit-transition: 1s ease all;
+    -ms-transition: 1s ease all;
+    -moz-transition: 1s ease all; }
   form textarea {
     margin: 0 auto;
     width: 80%;
@@ -921,7 +1063,7 @@ form {
   width: 100%;
   margin: 0 auto;
   text-align: center;
-  font-size: 45px;
+  font-size: 60px;
   margin-top: 30px;
   margin-bottom: 30px; }
 
@@ -941,10 +1083,16 @@ form {
     .social .soc a {
       text-decoration: none;
       color: rgba(0, 0, 0, 0.6);
-      transition: 0.3s ease all; }
+      transition: 0.3s ease all;
+      -webkit-transition: 0.3s ease all;
+      -moz-transition: 0.3s ease all;
+      -ms-transition: 0.3s ease all; }
     .social .soc a:hover {
       color: black;
-      transition: 0.3s ease all; }
+      transition: 0.3s ease all;
+      -webkit-transition: 0.3s ease all;
+      -moz-transition: 0.3s ease all;
+      -ms-transition: 0.3s ease all; }
 
 .companies {
   margin-top: 30px;
@@ -966,9 +1114,15 @@ form {
     margin-top: 10px;
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
+    -webkit-transition: 0.5s ease all;
+    -moz-transition: 0.5s ease all;
+    -ms-transition: 0.5s ease all;
     transition: 0.5s ease all;
     cursor: pointer; }
     .com img:hover {
+      -webkit-transition: 0.5s ease all;
+      -moz-transition: 0.5s ease all;
+      -ms-transition: 0.5s ease all;
       transition: 0.5s ease all;
       -webkit-filter: grayscale(0%);
       filter: grayscale(0%); }
@@ -993,6 +1147,9 @@ form {
 
   header .nav {
     height: 0px;
+    -webkit-transition: 0.2s ease all;
+    -moz-transition: 0.2s ease all;
+    -ms-transition: 0.2s ease all;
     transition: 0.2s ease all;
     top: -700px; }
 
@@ -1074,7 +1231,10 @@ form {
     margin-top: 15px;
     margin-bottom: 15px;
     margin-right: -35px;
-    transition: 1s ease all; } }
+    -webkit-transition: 0.5s ease all;
+    -moz-transition: 0.5s ease all;
+    -ms-transition: 0.5s ease all;
+    transition: 0.5s ease all; } }
 @media screen and (max-width: 960px) {
   .time_three {
     margin-top: 75px; }
@@ -1160,8 +1320,7 @@ form {
 @media screen and (max-width: 500px) {
   .wrap .polylion {
     transform: scale(1.75, 1.75);
-    margin-left: -150px;
-    transition: 0.5s ease all; }
+    margin-left: -150px; }
 
   #vid {
     transform: scale(0.5, 0.5);
@@ -1206,10 +1365,22 @@ form {
     width: 100%;
     font-size: 70px;
     margin-top: -60px;
-    transition: 2s ease all;
-    animation: load 2s infinite; }
+    -webkit-transition: 0.5s ease all;
+    -moz-transition: 0.5s ease all;
+    -ms-transition: 0.5s ease all;
+    transition: 0.5s ease all;
+    animation: load 2s infinite;
+    -webkit-animation: load 2s infinite;
+    -moz-animation: load 2s infinite; }
 
 @-webkit-keyframes load {
+  0% {
+    opacity: 0.3; }
+  50% {
+    opacity: 1; }
+  100% {
+    opacity: 0.3; } }
+@keyframes load {
   0% {
     opacity: 0.3; }
   50% {
@@ -1226,10 +1397,16 @@ svg polygon {
   width: 600px;
   margin: 0 auto;
   transform: scale(2.5, 2.5);
+  -ms-transform: scale(2.5, 2.5);
+  -moz-transform: scale(2.5, 2.5);
+  -webkit-transform: scale(2.5, 2.5);
   margin-right: 100px;
   position: relative; }
   .no-cssanimations .polylion > polygon {
     transform: scale(1);
+    -ms-transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
     opacity: 1; }
 
 /*# sourceMappingURL=style.css.map */
