--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ main {
   left: 0;
   color: white;
   line-height: 30px;
-  font-size: 1.75em;
+  font-size: 16px;
   padding: 10px;
   cursor: pointer;
   border-bottom-right-radius: 10px;
@@ -90,7 +90,7 @@ dialog span {
   cursor: pointer;
   background: white;
   color: #0D47A1;
-  font-size: 1.3em;
+  font-size: 18px;
   padding: 10px; }
 
 .see {
@@ -128,7 +128,7 @@ header .head_one {
   background-color: #0D47A1;
   height: 60px;
   line-height: 60px;
-  font-size: 1em;
+  font-size: 12px;
   z-index: 9999; }
 
 header .head_one span {
@@ -144,7 +144,7 @@ header .nav p {
   padding: 0px;
   text-align: center;
   color: rgba(255, 255, 255, 0.5);
-  font-size: 1em; }
+  font-size: 12px; }
 
 .nav p a {
   text-decoration: none;
@@ -282,13 +282,13 @@ header .nav {
 
 #home h2 {
   padding-top: 90px;
-  font-size: 3em; }
+  font-size: 32px; }
 
 #home h4 {
-  font-size: 1.5em; }
+  font-size: 16px; }
 
 #home p {
-  font-size: 1em;
+  font-size: 12px;
   padding: 30px; }
 
 #home a {
@@ -1290,7 +1290,7 @@ form {
 
   #home h2 {
     padding-top: 60px;
-    font-size: 2.2em; }
+    font-size: 30px; }
 
   #home h4 {
     font-size: 16; }
@@ -1310,7 +1310,7 @@ form {
     width: 100%;
     height: 60px;
     line-height: 60px;
-    font-size: 0.75em; }
+    font-size: 10px; }
 
   header .head_one span {
     float: right;
