--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,13 @@ header .nav {
   width: 100%;
   height: 800px;
   position: relative;
-  margin-bottom: 50px; }
+  margin-bottom: 50px; 
+}
+
+p{
+  font-size: 12px;
+  
+}
 
 .timeline_contain .line {
   height: 100%;
