--- a/css/style.css
+++ b/css/style.css
@@ -74,10 +74,6 @@ main {
   left: 0;
   color: white;
   line-height: 30px;
-<<<<<<< HEAD
-=======
-  font-size: 16px;
->>>>>>> origin/gh-pages
   padding: 10px;
   cursor: pointer;
   border-bottom-right-radius: 10px;
@@ -105,14 +101,6 @@ main {
     top: 150px;
     cursor: pointer; }
 
-.time{
-  font-size: 16px;
-}
-
-.skills{
-  font-size: 16px;
-}
-
 .con {
   float: left;
   text-align: center;
@@ -134,12 +122,7 @@ dialog span {
   display: block;
   cursor: pointer;
   background: white;
-<<<<<<< HEAD
   color: #D32F2F;
-=======
-  color: #0D47A1;
-  font-size: 18px;
->>>>>>> origin/gh-pages
   padding: 10px; }
 
 .see {
@@ -177,10 +160,6 @@ header .head_one {
   background-color: #D32F2F;
   height: 60px;
   line-height: 60px;
-<<<<<<< HEAD
-=======
-  font-size: 12px;
->>>>>>> origin/gh-pages
   z-index: 9999; }
 
 header .head_one span {
@@ -195,12 +174,7 @@ header .nav p {
   height: 100%;
   padding: 0px;
   text-align: center;
-<<<<<<< HEAD
   color: rgba(255, 255, 255, 0.5); }
-=======
-  color: rgba(255, 255, 255, 0.5);
-  font-size: 12px; }
->>>>>>> origin/gh-pages
 
 .nav p a {
   text-decoration: none;
@@ -337,20 +311,9 @@ header .nav {
   background-size: cover; }
 
 #home h2 {
-<<<<<<< HEAD
   padding-top: 90px; }
 
 #home p {
-=======
-  padding-top: 90px;
-  font-size: 32px; }
-
-#home h4 {
-  font-size: 16px; }
-
-#home p {
-  font-size: 12px;
->>>>>>> origin/gh-pages
   padding: 30px; }
 
 #home a {
@@ -406,13 +369,7 @@ header .nav {
   width: 100%;
   height: 110vh;
   position: relative;
-  margin-bottom: 50px; 
-}
-
-p{
-  font-size: 12px;
-  
-}
+  margin-bottom: 50px; }
 
 .timeline_contain .line {
   height: 100%;
@@ -1343,15 +1300,7 @@ form {
     top: -10%; }
 
   #home h2 {
-<<<<<<< HEAD
     padding-top: 60px; }
-=======
-    padding-top: 60px;
-    font-size: 30px; }
-
-  #home h4 {
-    font-size: 16; }
->>>>>>> origin/gh-pages
 
   #home p {
     padding: 10px; }
@@ -1365,12 +1314,7 @@ form {
   header .head_one {
     width: 100%;
     height: 60px;
-<<<<<<< HEAD
     line-height: 60px; }
-=======
-    line-height: 60px;
-    font-size: 10px; }
->>>>>>> origin/gh-pages
 
   header .head_one span {
     float: right;
