--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
-@import url(https://fonts.googleapis.com/css?family=Roboto);
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans);
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif; }
+  font-family: 'Noto Sans', sans-serif; }
 
 body {
   background: #ecf0f1;
@@ -14,10 +14,12 @@ body {
   font-weight: 200; }
 
 a {
-  font-size: 16px !important; }
+  font-size: 16px !important;
+  color: white; }
 
 .social i {
-  font-size: 40px !important; }
+  font-size: 40px !important;
+  color: #212121 !important; }
 
 button {
   font-size: 16px !important; }
@@ -234,15 +236,16 @@ header .nav {
   width: 110px;
   background-color: #F44336;
   transition: 0.5s ease all;
-  z-index: 999;
-  opacity: 0; }
+  z-index: 99;
+  opacity: 0;
+  margin-top: 40px; }
 
 .head_three p {
   float: left;
   width: 100%;
   color: white;
-  padding-top: 15px;
-  line-height: 30px;
+  padding-top: 35px;
+  line-height: 10px;
   text-align: center;
   padding-bottom: 15px;
   margin-bottom: 10px;
@@ -255,10 +258,11 @@ header .nav {
 
 .hamburger {
   float: left !important;
-  position: relative;
-  left: 0px;
+  position: fixed;
+  top: 0;
+  left: 0;
   opacity: 0;
-  height: 100%;
+  z-index: 9999 !important;
   font-size: 28px;
   cursor: pointer;
   transition: 0.5s ease all;
@@ -266,16 +270,14 @@ header .nav {
   -moz-transition: 0.5s ease all;
   -webkit-transition: 0.5s ease all; }
 
-.ham_slide {
-  left: 100px; }
-
 .headee_slide {
   left: 0px;
   opacity: 0;
   transition: 1s ease all;
   -ms-transition: 1s ease all;
   -moz-transition: 1s ease all;
-  -webkit-transition: 1s ease all; }
+  -webkit-transition: 1s ease all;
+  z-index: 999 !important; }
 
 .bye {
   opacity: 1; }
@@ -1167,11 +1169,10 @@ form {
   .nav p {
     display: none; }
 
-  .hamburger {
-    display: block;
+  .headee_slide {
     opacity: 1; }
 
-  .headee_slide {
+  .hamburger {
     opacity: 1; }
 
   .head_one {
