--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ main {
   margin: -40px auto; }
 
 .the_video {
-  height: 550px;
+  height: 800px;
   width: 100%;
   margin: 0 auto; }
   .the_video h1 {
@@ -902,6 +902,16 @@ form {
   color: #fff;
   overflow: hidden;
   text-align: center; }
+
+
+
+@media screen and (max-width: 1260px) {
+.the_video {
+  height: 550px;
+  }
+}
+
+
 
 @media screen and (max-width: 1100px) {
   .the_video {
