--- a/css/style.css
+++ b/css/style.css
@@ -94,23 +94,23 @@ main {
   border-bottom-left-radius: 5px;
   margin: -40px auto; }
 
-.the_video {
-  height: 800px;
-  width: 100%;
-  margin: 0 auto; }
-  .the_video h1 {
-    color: #1e88e5;
-    border: 15px solid #1e88e5;
-    padding: 30px;
-    margin: 0 auto;
-    width: 100px;
-    text-align: center;
-    height: 100px;
-    border-radius: 50%;
-    line-height: 100px;
-    position: relative;
-    top: 150px;
-    cursor: pointer; }
+/*.the_video {*/
+  /*height: 800px;*/
+  /*width: 100%;*/
+  /*margin: 0 auto; }*/
+  /*.the_video h1 {*/
+  /*  color: #1e88e5;*/
+  /*  border: 15px solid #1e88e5;*/
+  /*  padding: 30px;*/
+  /*  margin: 0 auto;*/
+  /*  width: 100px;*/
+  /*  text-align: center;*/
+  /*  height: 100px;*/
+  /*  border-radius: 50%;*/
+  /*  line-height: 100px;*/
+  /*  position: relative;*/
+  /*  top: 150px;*/
+  /*  cursor: pointer; }*/
 
 .con_button {
   float: left;
