--- a/css/style.css
+++ b/css/style.css
@@ -278,9 +278,11 @@ header .nav {
   text-align: center;
   margin: 0 auto;
   width: 100%;
-  height: 450px;
+  height: 475px;
   position: relative;
-  margin-bottom: 20px; }
+  margin-bottom: 20px; 
+  max-width: 900px;
+}
 
 #home:before {
   content: "";
@@ -986,6 +988,14 @@ form {
 @media screen and (max-width: 700px) {
 /*  .the_video {
     height: 300px; }*/
+
+
+h1 {
+  font-size: 47px;
+  line-height: 47px;
+  margin: 47px 0 0 0; }
+
+
 
   .submit {
     width: 90px !important;
