--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ main {
   width: 100%;
   height: 50px;
   background: #1e88e5;
-  bottom: 0;
+  bottom: -45px;
   left: 0;
   color: white;
   line-height: 50px;
