--- a/css/style.css
+++ b/css/style.css
@@ -726,8 +726,8 @@ header .nav {
 .person:before {
   content: "\f10d";
   font-family: FontAwesome;
-      font-style: normal;
-      font-weight: normal;
+      font-style: normal;
+      font-weight: normal;
   margin: 0 auto;
   position: absolute;
   height: 80px;
@@ -914,15 +914,12 @@ form {
 
 
 @media screen and (max-width: 1300px) {
-<<<<<<< HEAD
 /*.the_video {
   height: 550px;
   }*/
-=======
-.the_video {
-  height: 550px;
-  }
->>>>>>> origin/gh-pages
+// .the_video {
+//   height: 550px;
+//   }
 }
 
 
@@ -988,7 +985,7 @@ form {
     float: none; }
 
   #home:before {
-    left: 45%; } }
+    left: 42%; } }
 @media screen and (max-width: 700px) {
 /*  .the_video {
     height: 300px; }*/
@@ -999,8 +996,20 @@ h1 {
   line-height: 47px;
   margin: 47px 0 0 0; }
 
+h2 {
+  font-size: 26px;
+  line-height: 26px;
+  margin: 26px 0 0 0; }
 
+  .social i {
+  font-size: 25px !important;
+  color: #212121 !important; }
 
+  .com img {
+    height: 30px;
+    width: 30px;
+    margin-top: 20px;
+}
   .submit {
     width: 90px !important;
     height: 45px !important;
@@ -1045,14 +1054,17 @@ h1 {
     width: 100%;
     height: 400px;
     position: relative;
-    padding: 15px; }
+    padding: 15px; 
+    margin-bottom: -20px;
+
+  }
 
   .img {
     left: 39%;
     top: -10%; }
 
   #home h2 {
-    padding-top: 30px; }
+    padding-top: 45px; }
 
   #home p {
     padding: 10px; }
@@ -1060,7 +1072,7 @@ h1 {
 
 
   #home:before {
-    left: 35%; }
+    left: 40%; }
 
   header .head_one {
     width: 100%;
@@ -1071,7 +1083,18 @@ h1 {
     float: right;
     color: white;
     padding-left: 10px;
-    padding-right: 10px; } }
+    padding-right: 10px; } 
+
+.people{
+  margin: 0;
+  max-width: 95%;
+}
+
+.interests{
+    margin: 0;
+  max-width: 95%;
+}
+  }
 @media screen and (max-width: 500px) {
 /*  .the_video {
     height: 215px; }*/
@@ -1131,14 +1154,10 @@ h1 {
   
   #home {
   width: 85%;
+  margin-bottom: -20px;
 }
 
   #home:before {
-    left: 27.5%; }
+    left: 31.5%;
+    margin-bottom: 20px; }
 }
-
-
-
-
-
-/*# sourceMappingURL=style.css.map */
