--- a/css/style.css
+++ b/css/style.css
@@ -664,7 +664,7 @@ header .nav {
 .area {
   position: relative;
   flex: 1;
-  -webkit-flex: 1 1 auto;
+  -webkit-flex: 1;
   min-width: 275px;
   background-color: #fff;
   margin: 10px;
