--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,10 @@ header .nav {
   width: 70%;
   position: relative;
   margin-top: 200px;
-  transition: 1s ease all !important; }
+  transition: 1s ease all !important;
+  overflow: hidden !important;
+  
+}
 
 #home {
   background-color: white;
