--- a/css/style.css
+++ b/css/style.css
@@ -641,12 +641,17 @@ header .nav {
   margin: 0 auto;
   max-width: 100%;
   height: auto;
-  display: flex;
-  display: -webkit-flex;
+display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
   -webkit-flex-direction: row;
-  flex-direction: row; }
+  flex-direction: row; 
+  
+}
 
 .interest_one {
   transform: translate(0, 0);
@@ -666,6 +671,7 @@ header .nav {
   position: relative;
   flex: 1;
   -webkit-flex: 1;
+  width: 33%;
   min-width: 275px;
   background-color: #fff;
   margin: 10px;
