--- a/css/style.css
+++ b/css/style.css
@@ -1027,14 +1027,14 @@ form textarea {
 
 
 
-@media screen and (max-width: 1050px) {    
-  .person{
-    -webkit-flex: 1 1 auto;
-  }    
-  .area{
-    -webkit-flex: 1 1 auto;
-  }
-}
+/*@media screen and (max-width: 1050px) {    */
+/*  .person{*/
+/*    -webkit-flex: 1 1 auto;*/
+/*  }    */
+/*  .area{*/
+/*    -webkit-flex: 1 1 auto;*/
+/*  }*/
+/*}*/
   
   
 @media screen and (max-width: 700px) {
