--- a/css/style.css
+++ b/css/style.css
@@ -712,6 +712,7 @@ display: -webkit-box;
 .people {
   margin: 0 auto;
   max-width: 100%;
+  width: 100%;
   height: auto;
   display: flex;
   display: -webkit-flex;
@@ -725,10 +726,10 @@ display: -webkit-box;
   position: relative;
   flex: 1;
   -webkit-flex: 1;
+  width: 30%;
   background-color: #fff;
   padding: 10px;
   margin: 10px;
-  min-width: 250px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
 
 .person p {
@@ -1030,9 +1031,11 @@ form textarea {
 @media screen and (max-width: 1050px) {    
   .person{
     -webkit-flex: 1 1 auto;
+    width: 100%;
   }    
   .area{
     -webkit-flex: 1 1 auto;
+    width: 100%;
   }
 }
   
