--- a/css/style.css
+++ b/css/style.css
@@ -734,6 +734,7 @@ display: -webkit-box;
   background-color: #fff;
   padding: 10px;
   margin: 10px;
+  margin-top: 10px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
 
 .person p {
