--- a/css/style.css
+++ b/css/style.css
@@ -1004,11 +1004,12 @@ form textarea {
 @media screen and (max-width: 960px) {
   /*  .the_video {
       height: 415px; }*/
+      
   .timeline_contain:before {
-    left: 0%; }
+    left: 3%; }
 
   .timeline_contain .timeline_content_block .ball {
-    left: 0%;
+    left: 3%;
     margin-left: -7.5px; }
 
   .timeline_contain .timeline_content_block p {
@@ -1046,6 +1047,12 @@ form textarea {
 @media screen and (max-width: 700px) {
   /*  .the_video {
       height: 300px; }*/
+
+.wrapper {
+    margin-top: 20px;
+    position: relative; }
+
+
 
   h1 {
     font-size: 47px;
