--- a/css/style.css
+++ b/css/style.css
@@ -48,17 +48,26 @@ textarea {
 h1 {
   font-size: 67px;
   line-height: 67px;
-  margin: 67px 0 0 0; }
+  margin: 67px 0 0 0;
+  font-weight: 900 !important;
+}
 
 h2 {
   font-size: 41px;
   line-height: 41px;
-  margin: 41px 0 0 0; }
+  margin: 41px 0 0 0; 
+  font-weight: 700 !important;
+}
 
 h3 {
   font-size: 25px;
   line-height: 25px;
   margin: 25px 0 0 0; }
+  
+  p{
+  	font-size: 12px;
+  	font-weight: 200 !important;
+  }
 
 h3 i {
   font-size: 21px;
@@ -1133,7 +1142,7 @@ form textarea {
     padding-top: 45px; }
 
   #home p {
-    padding: 10px; }
+    padding: 1px; }
 
   #home:before {
     left: 40%; }
