--- a/css/style.css
+++ b/css/style.css
@@ -428,7 +428,7 @@ header .nav {
   width: 100%;
   height: 470px;
   margin: 0 auto;
-  background-color: #1e88e5;
+  background-color: #0397e2;
   position: relative;
   text-align: center;
   color: white;
@@ -1056,6 +1056,9 @@ form textarea {
 @media screen and (max-width: 700px) {
   /*  .the_video {
       height: 300px; }*/
+ .skills {
+  height: 400px;
+ }
 
 .wrapper {
     margin-top: 20px;
