--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,6 @@ color: #212121;
   
   p{
   	font-size: 13px;
-  	line-height: 200%;
   	font-weight: 200 !important;
   	color: #212121;
   }
@@ -316,7 +315,9 @@ header .nav {
   padding-top: 90px; }
 
 #home p {
-  padding: 30px; }
+  padding: 30px; 
+  line-height: 200%;
+}
 
 #home a {
   margin: 0 auto;
