--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,9 @@ body {
 
 a {
   font-size: 16px !important;
-  color: white; }
+  color: white; 
+  text-decoration: none !important;	
+}
 
 .social i {
   font-size: 40px !important;
@@ -50,7 +52,6 @@ h1 {
   line-height: 67px;
   margin: 67px 0 0 0;
   font-weight: 900 !important;
-  color: #212121;
 }
 
 h2 {
@@ -58,14 +59,12 @@ h2 {
   line-height: 36px;
   margin: 36px 0 0 0; 
   font-weight: 600 !important;
-  color: #212121;
 }
 
 h3 {
   font-size: 25px;
   line-height: 25px;
   margin: 25px 0 0 0; 
-color: #212121;	
 }
   
   p{
@@ -313,9 +312,17 @@ header .nav {
 
 #home h2 {
   padding-top: 90px; }
+  
+  #home h4 {
+  padding-top: 5px; 
+  	
+  }
 
 #home p {
-  padding: 30px; 
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 15px;
+  margin-bottom: 15px;
   line-height: 200%;
 }
 
