--- a/css/style.css
+++ b/css/style.css
@@ -915,7 +915,7 @@ form textarea {
 
 .social .soc a i {
   line-height: 75px;
-  color: rgba(0, 0, 0, 0.6) !important;
+  color: #0397e2 !important;
   transition: 0.3s ease all;
   -webkit-transition: 0.3s ease all;
   -moz-transition: 0.3s ease all;
