--- a/css/style.css
+++ b/css/style.css
@@ -1089,6 +1089,10 @@ form textarea {
     font-size: 26px;
     line-height: 26px;
     margin: 26px 0 0 0; }
+    
+    p{
+    	font-size: 11.5px !important;
+    }
 
   .social i {
     font-size: 25px !important;
