--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
 .skill {
   width: 80%;
   margin: 0 auto; }
+  
+  .con_button{
+  	color: white !important;
+  	font-size: 20px;
+  }
 
 .back_drop {
   height: 100vh;
