--- a/css/style.css
+++ b/css/style.css
@@ -286,7 +286,7 @@ header .nav {
   position: relative;
   margin-top: 200px;
   transition: 1s ease all !important;
-  -webkit-overflow-x: hidden !important;
+  overflow-x: hidden !important;
 }
 
 #home {
