--- a/css/style.css
+++ b/css/style.css
@@ -332,7 +332,7 @@ header .nav {
 #home a {
   margin: 0 auto;
   text-align: center;
-  background-color: #0397e2;
+  background-color: #d35400;
   display: block;
   position: relative;
   text-decoration: none;
@@ -410,7 +410,7 @@ header .nav {
 .timeline_contain .timeline_content_block .timeline_date {
   width: 10%;
   text-align: center;
-  background-color: #1e88e5;
+  background-color: #e67e22;
   color: white;
   padding: 10px;
   margin: 0 auto; }
@@ -421,7 +421,7 @@ header .nav {
 .timeline_contain .timeline_content_block .ball {
   height: 20px;
   width: 20px;
-  background-color: #0397e2;
+  background-color: #d35400;
   position: absolute;
   top: 5%;
   border-radius: 50%;
