--- a/css/style.css
+++ b/css/style.css
@@ -445,7 +445,7 @@ header .nav {
   width: 100%;
   height: 470px;
   margin: 0 auto;
-  background-color: #0397e2;
+  background-color: #d35400;
   position: relative;
   text-align: center;
   color: white;
