--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ main {
   position: absolute;
   width: 100%;
   height: 50px;
-  background: #1e88e5;
+  background: #d35400;
   bottom: -42.5px;
   left: 0;
   color: white;
