--- a/css/style.css
+++ b/css/style.css
@@ -968,7 +968,7 @@ form textarea {
 .tooltip {
   display: none;
   position: absolute;
-  background-color: #1e88e5;
+  background-color: #d35400;
   border-radius: 5px;
   padding: 7.5px;
   color: white;
