--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@ header .nav {
   top: 0;
   left: -150px;
   width: 110px;
-  background-color: #0397e2;
+  background-color: #e67e22;
   transition: 0.5s ease all;
   z-index: 99;
   opacity: 0;
