--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ header .nav {
   position: relative;
   width: 100%;
   overflow: hidden;
-  background-color: #e67e22;
+  background-color: #D64541;
   height: 80px;
   line-height: 80px;
   opacity: 1;
@@ -232,7 +232,7 @@ header .nav {
   top: 0;
   left: -150px;
   width: 110px;
-  background-color: #e67e22;
+  background-color: #D64541;
   transition: 0.5s ease all;
   z-index: 99;
   opacity: 0;
@@ -410,7 +410,7 @@ header .nav {
 .timeline_contain .timeline_content_block .timeline_date {
   width: 17.5%;
   text-align: center;
-  background-color: #e67e22;
+  background-color: #D64541;
   color: white;
   padding: 10px;
   margin: 0 auto; }
@@ -716,7 +716,7 @@ display: -webkit-box;
   width: 100%;
   height: 80px;
   line-height: 80px;
-  background-color: #e67e22;
+  background-color: #D64541;
   overflow: hidden;
   color: white;
   text-align: center; }
@@ -789,7 +789,7 @@ display: -webkit-box;
   width: 80px;
   top: -5%;
   left: 36%;
-  background-color: #e67e22;
+  background-color: #D64541;
   border-radius: 50%;
   color: white;
   line-height: 80px;
@@ -917,7 +917,7 @@ form textarea {
 
 .social .soc a i {
   line-height: 75px;
-  color: #e67e22 !important;
+  color: #D64541 !important;
   transition: 0.3s ease all;
   -webkit-transition: 0.3s ease all;
   -moz-transition: 0.3s ease all;
