--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ text-align: center;
 .img{
   height: 185px;
   width: 185px;
-  background-image: url(https://pbs.twimg.com/profile_images/819712767682904064/tFmrVxfu.jpg);
+  background-image: url(../images/Haaruun.jpg);
   background-position: center;
   background-size: cover;
   border-radius: 50%;
