--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ body {
   text-align: center;
 }
 
-a{
+.btn-wrap > a{
   margin: 30px;
   width: 200px;
   font-size: 16px;
@@ -130,7 +130,7 @@ a{
   margin-top: 40px;
 }
 
-a:hover {
+.btn-wrap > a:hover {
   background-position: 100% 0;
   moz-transition: all .4s ease-in-out;
   -o-transition: all .4s ease-in-out;
@@ -138,7 +138,7 @@ a:hover {
   transition: all .4s ease-in-out;
 }
 
-a:focus {
+.btn-wrap > a:focus {
   outline: none;
 }
 
@@ -154,7 +154,133 @@ a:focus {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-flow: column;
 }
+
+
+.work{
+    background: white;
+    height: 140px;
+    width: 42.5%;
+    display: flex;
+    align-items: center;
+    background-color: white;
+    box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25), -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+    border-radius: 50px;
+    justify-content: center;
+    margin-right: 4rem;
+    width: 42.5%;
+    margin: 10px;
+    animation-name: mymove;
+    animation-duration: 2s;
+    transition: 1s ease all;
+    animation-iteration-count: infinite;
+    position: relative;
+    top: 0px;
+    overflow: hidden;
+}
+
+
+.work{
+  background: white;
+    height: 140px;
+    width: 42.5%;
+    display: flex;
+    align-items: center;
+    background-color: white;
+    box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25), -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+    border-radius: 50px;
+    margin-right: 4rem;
+    width: 42.5%;
+    margin: 10px;
+    animation-name: mymove;
+    animation-duration: 2s;
+    transition: 1s ease all;
+    animation-iteration-count: infinite;
+    position: relative;
+    top: 0px;
+    overflow: hidden;
+    padding: 30px;
+}
+
+.code{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    border-right: 1px solid lightgray;
+    margin-right: 8px;
+}
+
+.icon-contain-design{
+     width: 105px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     border-radius: 50%;
+     padding-left: 6px;
+     padding-right: 5px;
+}
+
+.icon-contain > img{
+  width: 55px;
+  max-width: 55px;
+}
+
+.desc{
+  padding: 12px;
+}
+
+.desc > .text{
+  margin: 0;
+    font-size: 11px;
+    text-align: left;
+}
+
+
+.design{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    /* margin: 10px; */
+    height: 100%;
+    width: 100%;
+}
+
+
+.icon-contain-code{
+  width: 115px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  padding: 11px;
+  /* padding-left: 12px; */
+}
+
+
+
+
+.work-title {
+  text-decoration: none;
+  font-weight: 900;
+  font-family: gilroy;
+  font-size: 14px;
+ color: #4481eb;
+}
+
+
+.work-title:hover{
+    moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+    background: linear-gradient(to right, #25aae1, #4481eb, #04befe, #3f86ed);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+} 
+
 
 /* 
 @keyframes boxShadow {
@@ -174,7 +300,7 @@ a:focus {
 } */
 
 
-.right{
+/* .right{
   display: none;
   flex: 1;
   background: green;
@@ -182,7 +308,6 @@ a:focus {
   background-position: center;
   background-image: url(https://images.unsplash.com/photo-1543914004-01dfd361dc2d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=906&q=80);
   filter: grayscale(.75);
-  /* box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22); */
   color: white !important;
   animation-name: boxShadow;
   animation-duration: 2s;
@@ -200,17 +325,46 @@ a:focus {
   width: 100%;
   text-align: center;
   font-family: gilroy;
-}
+} */
 
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1200px) {
   .right{
     flex: 0;
     overflow: hidden;
   }
 
   .element{
+    width: 65%;
+  }
+
+  .work{
+    width: 65%;
+  }
+
+}
+
+@media screen and (max-width: 850px) {
+
+  .element{
     width: 85%;
+  }
+
+  .work{
+    width: 85%;
+  }
+
+}
+
+
+@media screen and (max-width: 650px) {
+
+  .element{
+    width: 95%;
+  }
+
+  .work{
+    width: 95%;
   }
 
 }
